# OmniSketchCpp

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  convert_json.py  plot_errs.py  plot_latencies.py  run_benchmarks.sh
benchmark/: CMakeLists.txt  benchmark.cpp  individual_probe_errors_benchmark.cpp  ingestion_benchmark.cpp  join_benchmark.cpp  min_hash_sketch_benchmark.cpp  min_hash_sketch_fixture.hpp  omni_sketch_benchmark.cpp  omni_sketch_fixture.hpp
benchmark_queries/: job-light.csv  ssb-skew.csv
benchmark_results/example-benchmark/: run1.json  run2.json
benchmark_results/min_hash_intersect/: 20250506_094257_93beed3.json  20250506_154725_7c52809.json  20250514_082650_ed51568.json  20250521_143739_ab6eceb.json  20250521_154938_8716606.json
benchmark_results/min_hash_union/: 20250506_094257_93beed3.json  20250506_154725_7c52809.json  20250514_082650_ed51568.json  20250521_143739_ab6eceb.json  20250521_154938_8716606.json
benchmark_results/omni_insert/: 20250506_094257_93beed3.json  20250506_154725_7c52809.json  20250514_082650_ed51568.json  20250521_143739_ab6eceb.json  20250521_154938_8716606.json
benchmark_results/omni_probe/: 20250506_094257_93beed3.json  20250506_154725_7c52809.json  20250514_082650_ed51568.json  20250521_143739_ab6eceb.json  20250521_154938_8716606.json
benchmark_results/ssb/: 20250506_094257_93beed3.json  20250506_154725_7c52809.json  20250514_082650_ed51568.json  20250521_143739_ab6eceb.json  20250521_154938_8716606.json
benchmark_results/ssb/baselines/: duckdb.json  postgres.json
benchmark_results/ssb_corr/: 20250514_082650_ed51568.json  20250521_143739_ab6eceb.json  20250521_154938_8716606.json
benchmark_results/ssb_skew/: 20250514_082650_ed51568.json  20250521_143739_ab6eceb.json  20250521_154938_8716606.json
benchmark_results/ssb_skew/baselines/: pessest.json  postgres.json
benchmark_results/ssb_skew_corr/: 20250514_082650_ed51568.json  20250521_143739_ab6eceb.json  20250521_154938_8716606.json
benchmark_results/ssb_skew_corr/baselines/: duckdb.json
cmake/: omnisketch-config.cmake.in
script/: benchmark_join_ordering.py  benchmark_result_extractor.py  build_job_light_sketches.sh  build_ssb_skew_sketches.sh  compare_query_results.py  duckdb_benchmarks.py  generate_join_order_fixed_queries.py  plot_dp_size_results.py  plot_omnisketch_insert.py  plot_omnisketch_probe.py  plot_probe_errors.py  postgres_benchmarks.py  transform_queries.py
src/: CMakeLists.txt  combinator.cpp  combinator.hpp  csv_importer.cpp  expression.cpp  expression.hpp  hash.cpp  hash.hpp  min_hash_sketch.cpp  min_hash_sketch.hpp  omni_sketch.cpp  omni_sketch.hpp  omni_sketch.tpp  omni_sketch_cell.cpp  omni_sketch_cell.hpp  plan_generator.cpp  registry.cpp
src/algorithm/: algorithm.cpp  algorithm.hpp  expression.hpp  join_operations.hpp  min_hash_set_intersection.hpp  min_hash_set_operations.hpp  omni_sketch_operations.hpp  set_membership.hpp
src/execution/: plan_node.cpp  query_graph.cpp
src/include/: combinator.hpp  csv_importer.hpp  hash.hpp  in_memory_table.hpp  min_hash_sketch.hpp  omni_sketch.hpp  omni_sketch_cell.hpp  plan_generator.hpp  registry.hpp  set_membership.hpp  value.hpp
src/include/execution/: plan_node.hpp  query_graph.hpp
src/include/min_hash_sketch/: intersect_min_hash_sketches.hpp  min_hash_sample.hpp  min_hash_sketch.hpp  min_hash_sketch_map.hpp  min_hash_sketch_pair.hpp  min_hash_sketch_set.hpp  min_hash_sketch_vector.hpp  min_hash_value_sample.hpp  validity_mask.hpp
src/include/omni_sketch/: foreign_sorted_omni_sketch.hpp  omni_sketch.hpp  omni_sketch_cell.hpp  pre_joined_omni_sketch.hpp  standard_omni_sketch.hpp
src/include/util/: hash.hpp  value.hpp
src/min_hash_sketch/: intersect_min_hash_sketches.cpp  min_hash_sample.cpp  min_hash_sketch_map.cpp  min_hash_sketch_pair.cpp  min_hash_sketch_set.cpp  min_hash_sketch_vector.cpp  validity_mask.cpp
src/omni_sketch/: omni_sketch.cpp  omni_sketch_cell.cpp
test/: CMakeLists.txt  algorithm_test.cpp  combinator_test.cpp  combinator_test.hpp  expression_test.cpp  min_hash_sketch_test.cpp  min_hash_sketch_test.hpp  omni_sketch_operations_test.cpp  omni_sketch_test.cpp  plan_generator_test.cpp  query_graph_test.cpp
viz/: benchmark_results  index.html  script.js  style.css
